add validator on UserController

--- a/public/css/import.css
+++ b/public/css/import.css
@@ -28,6 +28,7 @@
 @import url("components/hero.css");   
 @import url("components/texte-img-float.css");   
 @import url("components/form.css");
+@import url("components/boite-flex.css");
 
 /* page */ 
 @import url("pages/error.css");
