--- a/public/css/pages/userAccount.css
+++ b/public/css/pages/userAccount.css
@@ -1,9 +1,11 @@
 .userAccount{
     margin-inline: auto;
 }
+
+
 .userAccount a{
     display: block;
-    max-width: max-content;
+    text-align: center;
 }
 
 .userAccount>div{
